gv_interface: fix crash when non INET interface available.

Fix https://bugzilla.gnome.org/show_bug.cgi?id=710606